Add gangwar area to Hafen and Yachthafen